--- a/index.html
+++ b/index.html
@@ -2,39 +2,19 @@
 <h1>Bearcat Dash Prep</h1>
 
 
-<html lang="en">
-    <head>
-        <meta charset="utf=8" />
-        <title> JavaScript </title>
-        <script type="text/javascript">
-            function doIT() {
-                setInterval(function countdown() {
-                    now = new Date();
-                    then = Date.parse(document.getElementById("date").value);
-                    daysLeft = then - now;
-                    days = Math.floor(daysLeft / (1000 * 60 * 60 * 24));
-                    hours = Math.floor(daysLeft / (1000 * 60 * 60));
-                    mins = Math.floor(daysLeft / (1000 * 60));
-                    secs = Math.floor(daysLeft / 1000);
-                    dd = days;
-                    hh = hours - days * 24;
-                    mm = mins - hours * 60;
-                    ss = secs - mins * 60;
-                    document.getElementById("Countdown").innerHTML = dd + ' days ' + hh + 'hours' + mm + ' minutes ' + ss + ' seconds ';
-                }, 1000);
-            }
-        </script>
-    </head>
-    <body>
-        Enter a date in the format "December 24, 2014" <br> (optionally add time, e.g., "17:00:00)
-        <br><br>
-        <input type="text" id="date" size="50" /> <br><br>
-        <button onclick="doIt()">GO</button><br><br>
-        <div style="text-align:center; vertical-align:middle; width:400px; height:50px, border:2px solid; line-height:24px;font-family:Arial;">
-            Countdown:<br>
-            <div id="Countdown"> </div>
-        </div>
-    </body>
+<html>
+<body>
+
+
+
+<form action="/action_page.php">
+  Birthday: <input type="date" name="race">
+  <input type="submit">
+</form>
+
+<p><strong>Note:</strong> type="date" is not supported in Safari or Internet Explorer 11 (or earlier).</p>
+
+</body>
 </html>
 
 
